  passing in a Transaction or Span to use as the parent for the error. Before
  this change the *current* span or transaction, if any, was always used.
+
This option is not documented in the user docs, nor added to the TypeScript
types, because it is only expected to be useful for coming OTel Bridge work.

[float]
===== Bug fixes


[[release-notes-3.32.0]]
==== 3.32.0 2022/04/27

[float]
===== Features

* Add support for node v18. ({pull}2652[#2652])

* Add support for https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md[span compression].
  ({issues}2100[#2100], {issues}2604[#2604])
+
By default, consecutive (sibling) exit spans of the same name, type, subtype,
and destination with a duration of less than 50ms will be compressed into
a single composite span. A possible case is the
https://duckduckgo.com/?q=N%252B1+query+problem[N+1 query problem].
Traces with many consecutive matching spans will be represented -- both in data
and the APM UI -- more efficiently.
+
Span compression can be disabled or matching behavior configured with the
<<span-compression-enabled,`spanCompression* configuration options`>>.

* Marks spans as "exit spans" across all instrumentations, preventing additional
  child spans from being added to the exit spans.  See issue for a full list of
  spans types that will be treated as exit spans. ({issues}2601[#2601])

* Allow a new span to be created/started even if its transaction has ended.
  This is expected to be a very rare use case. ({pull}2653[#2653])

* The Trace Context headers are now propagated for http2 requests. ({pull}2656[#2656])


[[release-notes-3.31.0]]
==== 3.31.0 2022/03/23

[float]
===== Features

* Add `captureBody` support for Hapi. ({issues}1905[#1905])

* If a SNS or SQS single event trigger to an instrumented Lambda function
  includes message attributes with the name "traceparent" (and "tracestate"),