@@ -61,9 +61,15 @@ module.exports = function (http2, agent, { enabled }) {
         // core `http.IncomingMessage` and `http.ServerResponse` objects,
         // sufficient for `parsers.getContextFromRequest()` and
         // `parsers.getContextFromResponse()`, respectively.
+        // `remoteAddress` is fetched now, rather than at stream end, because
+        // this `stream.session.socket` is a proxy object that can throw
+        // `ERR_HTTP2_SOCKET_UNBOUND` if the Http2Session has been destroyed.
         trans.req = {
           headers,
-          socket: stream.session.socket,
+          // socket: stream.session.socket,
+          socket: {
+            remoteAddress: stream.session.socket.remoteAddress
+          },
           method: headers[':method'],
           url: headers[':path'],
           httpVersion: '2.0'
@@ -141,7 +147,7 @@ module.exports = function (http2, agent, { enabled }) {
 
   function updateHeaders (headers) {
     var trans = agent._instrumentation.currTransaction()
-    if (trans) {
+    if (trans && !trans.ended) {
       var status = headers[':status'] || 200
       trans.result = 'HTTP ' + status.toString()[0] + 'xx'
       trans.res.statusCode = status
